(fix) input stays visible (not under header) when keyboard pops up

--- a/client/sender-app/content/styles.css
+++ b/client/sender-app/content/styles.css
@@ -55,10 +55,10 @@ input {
   width: 300px;
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   height: 300px;
-  margin-top: -150px;
+  margin-top: -50px;
   margin-left: -150px;
 }
 
